# nb_qt_client

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialsettingsdialog.cpp  serialsettingsdialog.h  serialsettingsdialog.ui
assets/: index.html
